--- a/fakey-storey/index.html
+++ b/fakey-storey/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Fakey Storey</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module" src="./modules/index.js"></script>
   </head>
   <body id="body" class="">
     <header
