renamed files, added tailwind.config.js, tried some debugging

--- a/fakey-storey/index.html
+++ b/fakey-storey/index.html
@@ -40,7 +40,9 @@
       <section
         id="products"
         class="grid grid-cols-4 gap-4 mx-auto my-4 max-w-6xl border-b-2 rounded"
-      ></section>
+      >
+        <!-- Place product cards here -->
+      </section>
     </main>
     <footer
       id="footer"
