--- a/fakey-storey/index.html
+++ b/fakey-storey/index.html
@@ -38,7 +38,7 @@
         sources
       </h1>
       <section
-        id="products"
+        id="product-container"
         class="grid grid-cols-4 gap-4 mx-auto my-4 max-w-6xl border-b-2 rounded"
       >
         <!-- Place product cards here -->
